--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name"          : "node-stepper",
     "version"       : "0.0.1",
-    "description"   : "A Node-RED node that extracts Exif information from JPEG image buffers.",
+    "description"   : "A Node-RED node that wraps a stepper motor using the stepper-wiringpi library for a raspberry pi",
     "dependencies"  : {
         "stepper-wiringpi": "0.0.2"
     },
